--- a/CProject1/pages/empire.html
+++ b/CProject1/pages/empire.html
@@ -87,7 +87,7 @@
             </div>
         </div>
         <footer class="footer">
-            <a href="#">GitHub</a>
+            <a href="https://github.com/nrwinward/CProject">GitHub</a>
         </footer>
     </div>
 
