--- a/CProject1/index.html
+++ b/CProject1/index.html
@@ -28,6 +28,9 @@
                     <a class="nav-link" href="pages/rebels.html">Rebellion</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="pages/stats.html">Check the Stats</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="pages/about.html">About</a>
                 </li>
             </ul>
